--- a/keepr/appsettings.json
+++ b/keepr/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "CONNECTION_STRING": "server=SG-justin-dev-6005-mysql-master.servers.mongodirector.com;port=3306;database=CodeWorks;user id=Justin;password=m#lr0ymEl!",
+  "CONNECTION_STRING": "server=SG-justin-dev-6257-mysql-master.servers.mongodirector.com;port=3306;database=Keepr;user id=Justin;password=07K#eper_!",
   "AUTH0_DOMAIN": "dev-8278vy91.us.auth0.com",
   "AUTH0_AUDIENCE": "https://justindev.com"
 }
